--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
 <h1> Listar as views aqui </h1>
 <% if user_signed_in? %>
   <h4> Parabéns <%=current_user.email%> </h4>
+  <p><%= @policies %>
 <% end %>
