--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,9 @@
 <h1> Listar as views aqui </h1>
 <% if user_signed_in? %>
-  <h4> Parabéns <%=current_user.email%> </h4>
-  <p><%= @policies %>
+  <h4> Parabéns <%= current_user.email %> </h4>
+  <% if @request_completed %>
+    <p><%= @policies %></p>
+  <% else %>
+    <p><%= @message %></p>
+  <% end %>
 <% end %>
