--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,13 @@
 <h1> Listar as views aqui </h1>
 <% if user_signed_in? %>
   <h4> Parabéns <%= current_user.email %> </h4>
-  <%= @error_message unless @request_completed %>
-  <% if @policies["data"]["policies"].empty? %>
-    <p> No momento não há nenhuma apólice cadastrada </p>
+  <% if @request_completed %>
+    <% if @policies["data"]["policies"].present? %>
+      <%= @policies %>
+    <% else %>
+      <p> No momento não há nenhuma apólice cadastrada </p>
+    <% end %>
   <% else %>
-    <%= @policies %>
+    <%= @error_message %>
   <% end %>
 <% end %>
