--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,13 @@
 <h1> Listar as views aqui </h1>
 <% if user_signed_in? %>
-  <h4> Parabéns <%=current_user.email%> </h4>
+  <h4> Parabéns <%= current_user.email %> </h4>
+  <% if @request_completed %>
+    <% if @policies["data"]["policies"].present? %>
+      <%= @policies %>
+    <% else %>
+      <p> No momento não há nenhuma apólice cadastrada </p>
+    <% end %>
+  <% else %>
+    <%= @error_message %>
+  <% end %>
 <% end %>
