Login with google_oauth2 works

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,8 @@
 <% if user_signed_in? %>
   <h2> Bem vindo <%=current_user.email%>! </h2>
-  <br><br>
+  <br>
+  <%= button_to "logout", destroy_user_session_path, method: :delete  %>
+  <br>
   <h1> Lista de Apólices cadastradas </h1>
   <% if @request_completed %>
     <% if @policies.present? %>
